# dotfiles

./: .Xresources  .bashrc  .editorconfig  .gitignore  .gitmodules  .sops.yaml  .vimrc  .zshrc  0f  LICENSE.txt  README.md  autoconfig.yml  config  config.py  configuration.nix  dunstrc  flake.nix  i3blocks.conf  install.sh  laptop.patch  lib.nix  profiles.nix  quickmarks  treefmt.toml  update.sh
.fonts/: .uuid
.scripts/: 16:9_layout.json  LaunchPolybar.sh  cpu_usage.sh  lock.sh  nvidia_gpu_usage.sh  python.nix  rofi.sh  spotify.py  spotify.sh  update-system.sh  viewurl.sh  volume.py
common/: git-channels
home-manager/: config.nix  default.nix  home.nix  packages.nix
laptop/: configuration.nix
misc/: dotfiles.sh  sm64ex-leave-game.patch
modules/: agenix.nix  darwin.nix  docker.nix  gpg.nix  graphical.nix  hardware.nix  networking.nix  nix.nix  steam.nix  system.nix  xserver.nix
pc/: configuration.nix
pkgs/: all-packages.nix  cd-file.sh  mkscript.sh  nix-search-fzf.sh  nixpkgs-pr.sh  overlay.nix  speedtest.sh
qsettings/: QtProject.conf
scripts/: dotfiles.sh  overlay.nix
secrets/: .sops.yaml  cachix-config.age  cachix-dhall.age  (+5 more)
templates/rust/: .gitignore  .yamlfmt.yml  Cargo.toml  LICENSE-MIT  README.md  default.nix  flake.nix  package.nix  rust-toolchain.toml  shell.nix  treefmt.toml
templates/rust/.github/workflows/: build.yml  ci.yml
templates/rust/crates/change-me-project-name/: Cargo.toml  README.md  default.nix
templates/rust/crates/change-me-project-name/src/: main.rs
templates/rust/nix/: devshell.nix
templates/rust/scripts/: format.sh
(+308 files in other folders)
