[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
edition = "2024"
rust-version = "1.96.0"
license = "MIT OR Apache-2.0"
authors = ["Ivar Scholten"]

# High-performance but slow-to-compile release builds.
[profile.release-lto]
inherits = "release"
codegen-units = 1
lto = true

[workspace.lints.clippy]
# These get a lower priority since they are lint groups, we want to be able to override the level for individual lints.
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

[workspace.lints.rust]
missing_debug_implementations = "warn"
non-ascii-idents = "warn"

[workspace.lints.rustdoc]
private_doc_tests = "warn"
